--- a/src/components/ui-kits/Modal/styles.css
+++ b/src/components/ui-kits/Modal/styles.css
@@ -48,3 +48,9 @@
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+
+
+.modal-text {
+    color: #F05323;
+    font-family: 'Gilroy', serif;
+}
